--- a/TodoAPI/appsettings.Development.json
+++ b/TodoAPI/appsettings.Development.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "DbConnection": "Server = DESKTOP-12RMGAU\\SQL2019;Initial Catalog =ApiCrud;User ID=sa;Password=admin@2022"
+    //"DbConnection": "Server = DESKTOP-12RMGAU\\SQL2019;Initial Catalog =ApiCrud;User ID=sa;Password=admin@2022"
 
-    //"DbConnection": "Server=tcp:mydbnet.database.windows.net,1433;Initial Catalog=ApiCrud;Persist Security Info=False;User ID=sqladmin;Password=admin@2022;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DbConnection": "Server=tcp:demosqlnet.database.windows.net,1433;Initial Catalog=mydbnet;Persist Security Info=False;User ID=sqladmin;Password=admin@2022;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
