--- a/TodoAPI/Dockerfile.txt
+++ b/TodoAPI/Dockerfile.txt
@@ -11,10 +11,10 @@ COPY . .
 WORKDIR "/src/TodoAPI"
 RUN dotnet build "TodoAPI/TodoAPI.csproj" -c Release -o /app/build
 
-FROM build as publish
+FROM build AS publish
 RUN dotnet publish "TodoAPI/TodoAPI.csproj" -c Release -o /app/publish
 
-FROM build As publish
+FROM build AS publish
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "TodoAPI.dll"]
