--- a/TodoAPI/appsettings.Development.json
+++ b/TodoAPI/appsettings.Development.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     //"DbConnection": "Server = DESKTOP-12RMGAU\\SQL2019;Initial Catalog =ApiCrud;User ID=sa;Password=admin@2022"
 
-    "DbConnection": "Server=tcp:demosqlnet.database.windows.net,1433;Initial Catalog=mydbnet;Persist Security Info=False;User ID=sqladmin;Password=admin@2022;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DbConnection": "Server=tcp:myserver566.database.windows.net,1433;Initial Catalog=mydata;Persist Security Info=False;User ID=admin123;Password=admin@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
