--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,5 +43,32 @@ stages:
                 command: 'buildAndPush'
                 Dockerfile: '**/Dockerfile'
                 tags: $(Build.BuildId)
-
+  - stage: Dev-Deploy
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
+    dependsOn: Build
+    jobs:
+      - deployment: Dev-Deploy
+        displayName: Dev-Deploy
+        environment:
+          name: dev-env
+        variables:
+         - template: veriablevariable-dev.yaml
+        workspace:
+          clean: all
+        pool:
+         vmImage: 'ubuntu-latest'
+        strategy:
+         runOnce:
+           deploy:
+             steps:
+                - task: AzureRmWebAppDeployment@4
+                  inputs:
+                    ConnectionType: 'AzureRM'
+                    azureSubscription: 'Azure subscription 1(62d23974-1452-401f-ae2f-b88e5377196d)'
+                    appType: 'webAppContainer'
+                    WebAppName: 'cicdnew2022'
+                    DockerNamespace: 'interviewcicd.azurecr.io'
+                    DockerRepository: 'repo'
+                    DockerImageTag: '$(Build.BuildId)'
+                        
 
