--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ stages:
                     ConnectionType: 'AzureRM'
                     azureSubscription: 'Azure subscription 1(62d23974-1452-401f-ae2f-b88e5377196d)'
                     appType: 'webAppContainer'
-                    WebAppName: 'cicdnew2022'
+                    WebAppName: 'interviewcicd'
                     DockerNamespace: 'interviewcicd.azurecr.io'
                     DockerRepository: 'repo'
                     DockerImageTag: '$(Build.BuildId)'
